Update contact email

--- a/support.html
+++ b/support.html
@@ -204,7 +204,7 @@
         <h2>Contact Support</h2>
         <p>Having an issue or want to suggest a feature? We'd love to hear from you!</p>
         <p style="text-align: center; margin-top: 20px;">
-            <a href="mailto:tabcutter@proton.me" class="contact-btn">📧 Email Us</a>
+            <a href="mailto:devsupportnow@proton.me" class="contact-btn">📧 Email Us</a>
         </p>
 
         <footer>
