--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         <h2>Contact</h2>
         <p>If you have any questions about this privacy policy, please contact us at:</p>
-        <p><a href="mailto:tabcutter@proton.me">tabcutter@proton.me</a></p>
+        <p><a href="mailto:devsupportnow@proton.me">devsupportnow@proton.me</a></p>
 
         <footer>
             <p>© 2026 TabCutter. All rights reserved.</p>
